# project-code-api

./: .dockerignore  .env template  Dockerfile  Makefile  README.md  docker-compose.yml  make_activate_env.sh  pyproject.toml
app/: .env template  README.md  config.py  main.py
docs/: fastapi-azure.md
