[tool.poetry]
name = "project-code-api"
version = "0.1.0"
description = "FastAPI for databricks table for launchpad"
authors = ["Alex Zhouk <alex.zhouk@machinalabs.ai>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "^0.104.1"
uvicorn = { version = "^0.24.0.post1", extras = ["standard"] }
SQLAlchemy = "^1.4.50"
sqlalchemy-databricks = "^0.2.0"
databricks-sql-connector = "2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
